# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
#
# Invenio is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[metadata]
name = invenio-webhooks
version = attr: invenio_webhooks.__version__
description = "Invenio webhooks module to create REST APIs."
long_description = file: README.rst, CHANGES.rst
keywords = invenio webhooks
license = GPLv2
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-webhooks
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=1.3.2
    invenio-oauthclient>=2.0.1
    invenio-oauth2server>=1.3.6

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.2
    invenio-celery>=1.2.4
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
    pytest-invenio>=1.4.11
    sphinx>=4.2.0,<5
    # pytest-cache>=1.0
    # iniconfig>=1.1.1

[options.entry_points]
invenio_base.api_apps =
    invenio_webhooks = invenio_webhooks:InvenioWebhooks
invenio_base.api_blueprints =
    invenio_webhooks = invenio_webhooks.views:blueprint
invenio_base.models =
    invenio_webhooks = invenio_webhooks.models
invenio_db.alembic =
    invenio_webhooks = invenio_webhooks:alembic
invenio_db.models =
    invenio_webhooks = invenio_webhooks.models
invenio_i18n.translations =
    messages = invenio_webhooks
invenio_oauth2server.scopes =
    webhooks_event = invenio_webhooks.views:webhooks_event

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_webhooks/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_webhooks/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_webhooks/translations/messages.pot
output-dir = invenio_webhooks/translations/

[update_catalog]
input-file = invenio_webhooks/translations/messages.pot
output-dir = invenio_webhooks/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_webhooks --cov-report=term-missing
testpaths = docs tests invenio_webhooks
